# simulation

./: CMakeLists.txt  Makefile  README.md  home_map.pgm  home_map.yaml  package.xml  setup.cfg  setup.py
launch/: mecanum_sim.launch.py
src/: .gitignore  README.md  c_cpp_properties_sample.json
src/.devcontainer/: devcontainer.json
src/res/: roboost_mecanum_robot.urdf.xacro
src/roboost/: CMakeLists.txt  package.xml  setup.py
src/roboost/audio/: audio.tar.xz  play_random.sh
src/roboost/config/: .gitignore  joystick.yaml  mapper_params_online_async.yaml  movement_patterns.yaml  nav2_params.yaml  stb_localization.yaml  timescale.yaml
src/roboost/launch/: camera.launch.py  joy_control.launch.py  joy_launch.py  localization_launch.py  mecanum_sim.launch.py  mecanum_tf_broadcast.launch.py  mecanum_tf_broadcast_launch.py  navigation_launch.py  online_async_launch.py
src/roboost/maps/: home_2_map.data  home_2_map.pgm  home_2_map.yaml  home_map.data  home_sim_map.data  home_sim_map.pgm  home_sim_map.yaml
src/roboost/resource/flat/: model.config  model.sdf
src/roboost/roboost/: audio_player_node.py  camera_publisher_node.py  odom_to_base_node.py  timescale_connector_node.py
src/roboost/robot_descriptions/components/: chassis.xacro
src/roboost/robot_descriptions/components/sensors/: camera.xacro  imu.xacro  lidar.xacro
src/roboost/robot_descriptions/components/wheels/: mecanum_wheel_left.xacro  mecanum_wheel_right.xacro
src/roboost/robot_descriptions/macros/: inertia_macros.xacro
src/roboost/robot_descriptions/materials/: materials.xacro
src/roboost/robot_descriptions/properties/: properties.xacro
src/roboost/robot_descriptions/robots/: mecanum_robot.urdf.xacro
src/roboost/scripts/: audio_player_node.py  camera_publisher_node.py  covariance_calc.py  covariance_calc_per_cmd_vel.py  movement_pattern_node.py  odom_to_base_node.py  timescale_connector_node.py
src/roboost/src/: image_publisher.cpp  image_stream.cpp
src/roboost/urdf/: gazebo_control.xacro  roboost_materials.xacro  roboost_mecanum_robot.urdf.xacro
src/roboost/worlds/: home.world
src/tf_broadcast_package/: package.xml  setup.cfg  setup.py
src/tf_broadcast_package/launch/: mecanum_tf_broadcast_launch.py
src/tf_broadcast_package/meshes/: Mecanum-Wheel-Left.STL  Mecanum-Wheel-Right.STL
src/tf_broadcast_package/tf_broadcast_package/: odom_to_base_node.py
src/tf_broadcast_package/urdf/: roboost_mecanum_robot.urdf.xacro
src/urdf/: roboost_mecanum_robot.urdf.xacro
(+1 files in other folders)
